--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^9.15.0",
+    "framer-motion": "^9.0.7",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
